--- a/myStyle.css
+++ b/myStyle.css
@@ -1,42 +1,86 @@
+* {
+  box-sizing: border-box;
+}
+
 body 
 {
      /*font-family: "Lato", sans-serif;*/	
      font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
      font-size: 18px;
-     font-size: 4vw
+     font-size: 2vw
      line-height: 125%;
      color: black;
-     background-color:#F5F8FD;
+     background-color:#FFFFFF;
      margin-left : 0px;
      margin-right : 0px;
      padding : 0px;
   }
   
 .header {
-  background-color: #E3ECF9;
-  text-align: center;
-  padding: 10px;
+  background-color: #f0f0f0;
+  text-align: middle;
+  padding: 2px 5px 2px 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  margin-bottom: .6vw;
 }
+
+h1 {
+  font-size: 3.5vw;
+  margin: 1.5vw 0 1vw 0;
+}
+
+h2 {
+  font-size: 2vw;
+  margin: 1vw 0 1.5vw 0;  
+}
+
+ul {
+  display: block;
+  list-style-type: disc;
+  margin: 100px
+  margin-top: 10px;
+  margin-bottom: 1 em;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 30px;
+  font-size: 1.5vw;
+  line-height: 135%
+}
+
+li {
+	margin: 10px;
+	margin-left: 3px;
+}
+
+p {
+	font-size:	1.5vw;
+}
+p.notop {
+	margin-top: 0;
+}
+p.nobot {
+	margin-bottom: 0;
+}
+
   
 /* Create three equal columns that floats next to each other */
 .column-left {
   float: left;
-  width: 14%;
-  padding: 10px;
+  width: 16%;
+  padding: 10px 5px 0 0px;
 }
 
 .column-right {
   float: left;
-  width: 14%;
-  padding: 15px;
+  width: 16%;
+  padding: 10px 0px 0 5px;
 }
-
 .column {
   float: left;
-  width: 70%;
-  padding: 14px;
+  width: 68%;
+  padding: 10px 10px;
+  background: #FFFFFF
 }
-
 
 /* Clear floats after the columns */
 .row:after {
@@ -45,8 +89,14 @@ body
   clear: both;
 }
 
-p {
-	font-size:	2vw;
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  padding: 10px;
+  text-align: left;
+  background-color: #f1f1f1;
+  margin-bottom: 1.2vw;
 }
 
 .main {
@@ -63,7 +113,7 @@ div.box
     padding: 0px;
     border: 0px solid gray;
     margin: 0px;
-		font-size: 20px;
+	font-size: 20px;
     line-height: 125%;
 }
 
@@ -124,7 +174,7 @@ table td
 .vertical-menu {
   width: 100%;
   height: 100%;
-  font-size: 2.2vw;
+  font-size: 1.8vw;
   overflow-y: auto;
 }
 
@@ -148,56 +198,3 @@ table td
 
 
 
-* {box-sizing: border-box}
-body {font-family: "Lato", sans-serif;}
-
-/* Style the tab */
-.tab {
-  float: left;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-  width: 20%;
-  height: 100%;
-}
-
-/* Style the buttons inside the tab */
-.tab button {
-  display: block;
-  background-color: inherit;
-  color: black;
-  padding: 22px 16px;
-  width: 100%;
-  border: none;
-  outline: none;
-  text-align: left;
-  cursor: pointer;
-  font-size: 2vw;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-}
-
-/* Create an active/current "tab button" class */
-.tab button.active {
-  background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-  float: left;
-  padding: 0px 12px;
-  border: 0px solid #ccc;
-  width: 70%;
-  border-left: none;
-  height: 100%;
-  display: none;
-}
-
-/* Clear floats after the tab */
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
