--- a/myStyle.css
+++ b/myStyle.css
@@ -78,7 +78,7 @@ p.nobot {
 .column {
   float: left;
   width: 68%;
-  padding: 0.1vw 0 0.1vw 0;
+  padding: 0.1vw 0.1vw 0.1vw 0.1vw;
   background: #FFFFFF
 }
 
