--- a/myStyle.css
+++ b/myStyle.css
@@ -5,7 +5,7 @@
 body 
 {
      /*font-family: "Lato", sans-serif;*/	
-     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+     font-family: Arial, Helvetica, sans-serif;
      font-size: 18px;
      font-size: 2vw
      line-height: 125%;
