--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         <ul>
           <li>
             <img
-              src="https://sees-usf.github.io/images/logo-1_17_25.png"
+              src="https://sees-usf.github.io/sees_logo.png"
               alt="SEES Lab Logo"
               width="100"
             />
