--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,54 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.jade.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      integrity="sha512-C5lA3l93L2z5lTOI5mpVRilv8N78YQ3Mpbn1CkH+sx5K9Q9U+I7dLbxU+lS4EC4UG0rk8hvW8+4t3Qq2HyC/7A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <style>
       :root {
         --pico-font-family: Verdana, sans-serif;
+      }
+      .profile-card {
+        text-align: center;
+        padding: 30px;
+        border-radius: 12px;
+        background-color: #f2f0e8;
+      }
+
+      .profile-image {
+        width: 160px;
+        height: 160px;
+        border-radius: 50%;
+        object-fit: cover;
+        border: 4px solid white;
+      }
+
+      .name {
+        color: #e74c3c;
+        margin-top: 20px;
+        font-size: 24px;
+      }
+
+      .title {
+        color: #555;
+        font-size: 18px;
+        margin-bottom: 15px;
+      }
+
+      .icons a {
+        margin: 0 8px;
+        color: #444;
+        font-size: 22px;
+        text-decoration: none;
+        transition: color 0.3s;
+      }
+
+      .icons a:hover {
+        color: #e74c3c;
       }
     </style>
     <title>SEES</title>
