--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,22 +8,19 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.jade.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-      integrity="sha512-C5lA3l93L2z5lTOI5mpVRilv8N78YQ3Mpbn1CkH+sx5K9Q9U+I7dLbxU+lS4EC4UG0rk8hvW8+4t3Qq2HyC/7A=="
+    <script
+      src="https://kit.fontawesome.com/821657a516.js"
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    ></script>
     <style>
       :root {
         --pico-font-family: Verdana, sans-serif;
       }
+
       .profile-card {
         text-align: center;
         padding: 30px;
         border-radius: 12px;
-        background-color: #f2f0e8;
       }
 
       .profile-image {
