--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
         <ul>
           <li>
             <img
-              src="https://sees-usf.github.io/sees_logo.png"
+              src="https://sees-usf.github.io/rounded_sees_logo.png"
               alt="SEES Lab Logo"
               width="100"
             />
