--- a/_includes/image_frame.html
+++ b/_includes/image_frame.html
@@ -1,3 +1,5 @@
 <div class="image-frame">
-  <img src="{{ include.src }}" alt="Framed Image" />
+  <a href="{{ include.src }}" target="_blank" rel="noopener noreferrer">
+    <img src="{{ include.src }}" alt="Framed Image"
+  /></a>
 </div>
