Added gallery to navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,11 +87,12 @@
           </li>
         </ul>
         <ul>
-          <li><a href="./">Home</a></li>
-          <li><a href="./research">Research</a></li>
-          <li><a href="./teaching">Teaching</a></li>
-          <li><a href="./people">People</a></li>
-          <li><a href="./contact">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/research">Research</a></li>
+          <li><a href="/teaching">Teaching</a></li>
+          <li><a href="/people">People</a></li>
+          <li><a href="/contact">Contact</a></li>
+          <li><a href="/gallery">Gallery</a></li>
         </ul>
       </nav>
     </header>
