--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
           <li><a href="/research">Research</a></li>
           <li><a href="/teaching">Teaching</a></li>
           <li><a href="/people">People</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <!--li><a href="/contact">Contact</a></li-->
           <li><a href="/gallery">Gallery</a></li>
         </ul>
       </nav>
